--- a/style.css
+++ b/style.css
@@ -2,7 +2,6 @@
 
 *{
     font-family: 'Exo 2';
-    margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
@@ -15,6 +14,7 @@ body {
 }
 
 #header{
+    max-width: 1000px;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -24,7 +24,7 @@ body {
 }
 
 .logo{
-    width: 80px;
+    width: 60px;
     border-radius: 20%;
 }
 
@@ -50,7 +50,13 @@ body {
 }
 
 .container{
-    max-width: 800px;
+    max-width: 1000px;
+    background-color: #fff;
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 20px;
 }
 
 .container-daily header{
@@ -64,7 +70,7 @@ body {
     --justify-content: center;
 }
 
-.container-daily header .category{
+.category{
     background-color: rgb(52, 32, 122);
     width: fit-content;
     padding: 8px;
@@ -74,17 +80,17 @@ body {
     border-bottom-right-radius: 15px;
 }
 
-.container-daily header .title{
+.title{
     background-color: rgba(0, 0, 0, 0.92);
     width: fit-content;
     padding: 8px;
     font-size: 3rem;
     font-weight: bold;
-    border-top-right-radius: 15px;
-    border-bottom-right-radius: 15px;
+    border-top-right-radius: 20px;
+    border-bottom-right-radius: 20px;
 }
 
-.container-daily header .textSnippet{
+.textSnippet{
     background-color: rgba(43, 41, 41, 0.9);
     width: fit-content;
     padding: 8px;
@@ -92,6 +98,29 @@ body {
     border-bottom-right-radius: 15px;
 }
 
+.container-daily:hover, .container-articles:hover{
+    cursor: pointer;
+    transform: scale(1.007);
+    transition: all 0.3s ease;
+}
+
+.container-articles header{
+    background-image: url('assets/img/tactics_1.png');
+    background-size: cover;
+    border-radius: 16px;
+    min-height: 400px;
+    padding: 20px 50px 20px 0;
+    display: flex;
+    flex-direction: column;
+    gap: 120px;
+}
+
+.bar{
+    height: 200px;
+    width: 100%;
+    background-color: #202020;
+    border-radius: 15px;
+}
 
 
 
