--- a/style.css
+++ b/style.css
@@ -55,6 +55,7 @@ body {
     padding: 20px;
     display: flex;
     flex-direction: column;
+    align-items: center;
     justify-content: center;
     gap: 20px;
 }
@@ -115,15 +116,51 @@ body {
     gap: 120px;
 }
 
-.bar{
-    height: 200px;
+.container-categorys{
+    height: fit-content;
+    padding: 20px;
     width: 100%;
-    background-color: #202020;
+    background-color: #417d81;
     border-radius: 15px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    column-gap: 40px;
+}
+
+.span-category{
+    margin-left: 5px;
+}
+
+#category-news, #category-transfer, #category-table, #category-live, #category-archiv{
+    padding: 20px;
+    font-size: 20px;
+    background-color: rgb(23, 48, 158);
+    border-radius: 10px;
+}
+#category-live{
+    animation: 2s ease infinite beat;
+    color: rgb(214, 55, 55);
+}
+
+#category-news:hover, #category-transfer:hover, #category-table:hover, #category-live:hover, #category-archiv:hover{
+    cursor: pointer;
+    transform: scale(1.05);
+    transition: all 0.3s ease;
 }
 
 
 
+
+
+/* Animations */
+@keyframes beat {
+    0%, 50%, 100% { transform: scale(1, 1); }
+    20%, 80% { transform: scale(0.97, 0.99); }
+}
+@keyframes roll {
+    100% { transform: rotate(360deg); }
+}
 
 
 
@@ -175,3 +212,7 @@ body {
 .switch input:checked +span::before{
     transform: translateX(22px);
 }
+
+
+
+
