--- a/style.css
+++ b/style.css
@@ -1,218 +1,256 @@
-@import url('https://fonts.googleapis.com/css2?family=Exo+2:ital,wght@0,100..900;1,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 *{
-    font-family: 'Exo 2';
+    margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
-body {
-    height: 100vh;
-    color: #fff;
-    background-color: #202020;
-    padding: 50px;
+body{
+    font-family: 'Poppins', sans-serif;
+    scroll-behavior: smooth;
+    transition: 0.3 all;
+    background-color: #EAE7DC;
+}
+
+a{
+    text-decoration: none;
+}
+
+/* Header navbar */
+
+.navbar{
+    max-width: 1400px;
+    --width: fit-content;
+    margin: auto;
+}
+
+li{
+    list-style: none;
+}
+.flex{
+    display: flex;
+    align-items: center;
 }
 
 #header{
-    max-width: 1000px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+    position: sticky;
+    top: 0;
+    transition: 0.3s linear;
+    background-color: #383b47;
     padding: 10px;
-    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.08);
-    background-color: rgb(102, 74, 74);
+    z-index: 1;
+}
+
+header nav{
+    position: relative;
+    justify-content: space-between;
 }
 
 .logo{
-    width: 60px;
-    border-radius: 20%;
+    gap: 10px;
+    margin-left: 10px;
 }
 
-#nav{
-    display: flex;
-    align-items: center;
-    justify-content: center;
+.logo-image{
+    width: 100px;
+    height: 100px;
+    background-color: #EAE7DC;
+    border-radius: 50px;
 }
 
-#nav li{
-    list-style: none;
-    padding: 0 20px;
+.logo-image img{
+    width: 100%;
+    height: 100%;
 }
 
-#nav li a{
-    text-decoration: none;
-    font-size: 20px;
-    font-weight: 600;
-    color: rgb(0, 0, 0);
+.logo a h1{
+    font-family: sans-serif;
+    font-size: 30px;
+    font-weight: 800;
+    letter-spacing: 2px;
+    color: #EAE7DC;
 }
-#nav li a:hover{
+
+.navlist ul{
+    gap: 40px;
+    font-family: 'Popping', sans-serif;
+}
+
+.navlist ul li a{
+    font-size: 18px;
     cursor: pointer;
+    display: flex;
+    color: rgb(241, 241, 241);
 }
 
-.container{
-    max-width: 1000px;
-    background-color: #fff;
-    padding: 20px;
+.navlist ul li i{
+    font-size: 18px;
+    margin-right: 5px;
+    color: #EAE7DC;
+}
+
+
+
+/* Main container */
+
+
+/* Top daily news */
+.container-main{
+    padding: 100px;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
-    gap: 20px;
+    gap: 40px;
 }
 
-.container-daily header{
-    background-image: url('assets/img/daily.jpg');
-    border-radius: 16px;
-    min-height: 400px;
-    padding: 20px 50px 20px 0;
+.container-daily{
     display: flex;
-    flex-direction: column;
-    gap: 120px;
-    --justify-content: center;
+    align-items: center;
+    justify-content: center;
+    gap: 40px;
+    flex-wrap: wrap;
 }
 
-.category{
-    background-color: rgb(52, 32, 122);
-    width: fit-content;
-    padding: 8px;
-    font-size: 1.2rem;
-    font-weight: bold;
-    border-top-right-radius: 15px;
-    border-bottom-right-radius: 15px;
+.container-daily-news{
+    background-color: #EAE7DC;
+    border-radius: 10px;
+    box-shadow: 0 1px 15px rgba(0, 0, 0, 0.35);
+    overflow: hidden;
+    width: 800px;
+
 }
 
-.title{
-    background-color: rgba(0, 0, 0, 0.92);
-    width: fit-content;
-    padding: 8px;
-    font-size: 3rem;
-    font-weight: bold;
-    border-top-right-radius: 20px;
-    border-bottom-right-radius: 20px;
+.container-daily-news img{
+    object-fit: cover;
+    height: 100%;
+    width: 100%;
+    margin-bottom: 10px;
+    box-shadow: 0 2px 25px rgba(0, 0, 0, 0.2);
 }
 
-.textSnippet{
-    background-color: rgba(43, 41, 41, 0.9);
-    width: fit-content;
-    padding: 8px;
-    border-top-right-radius: 15px;
-    border-bottom-right-radius: 15px;
-}
-
-.container-daily:hover, .container-articles:hover{
+.container-daily-news:hover{
     cursor: pointer;
     transform: scale(1.007);
-    transition: all 0.3s ease;
+    transition: 0.5s ease;
 }
 
-.container-articles header{
-    background-image: url('assets/img/tactics_1.png');
-    background-size: cover;
-    border-radius: 16px;
-    min-height: 400px;
-    padding: 20px 50px 20px 0;
+.container-daily-infos{
     display: flex;
     flex-direction: column;
-    gap: 120px;
+    align-items: start;
+    gap: 15px;
+    padding: 20px;
 }
 
-.container-categorys{
-    height: fit-content;
-    padding: 20px;
-    width: 100%;
-    background-color: #417d81;
-    border-radius: 15px;
+.daily-header{
+    width: fit-content;
+    background-color: #383b47;
+    padding: 1px 10px;
+    border-top-right-radius: 15px;
+    border-bottom-right-radius: 15px;
+    color: #f0eee6;
+    font-size: 20px;
+    font-weight: 600;
+    box-shadow: 0 1px 15px rgba(0, 0, 0, 0.2);
+    margin-bottom: 40px;
+}
+
+.daily-category{
+    background-color: #383b47;
+    border-top-right-radius: 15px;
+    border-bottom-right-radius: 15px;
+    padding: 1px 10px;
+    color: #f0eee6;
+    font-size: 18px;
+    font-weight: 600;
+    box-shadow: 0 1px 15px rgba(0, 0, 0, 0.2);
+}
+
+.daily-title{
+    
+}
+
+.daily-subtext{
+
+}
+
+
+/* Older articles */
+
+.container-articles{
     display: flex;
     align-items: center;
     justify-content: center;
-    column-gap: 40px;
+    gap: 40px;
+    flex-wrap: wrap;
 }
 
-.span-category{
-    margin-left: 5px;
-}
 
-#category-news, #category-transfer, #category-table, #category-live, #category-archiv{
+
+.container-articles{
     padding: 20px;
-    font-size: 20px;
-    background-color: rgb(23, 48, 158);
+}
+
+.article{
+    width: 350px;
+    background-color: #EAE7DC;
     border-radius: 10px;
-}
-#category-live{
-    animation: 2s ease infinite beat;
-    color: rgb(214, 55, 55);
+    box-shadow: 0 1px 15px rgba(0, 0, 0, 0.35);
+    overflow: hidden;
 }
 
-#category-news:hover, #category-transfer:hover, #category-table:hover, #category-live:hover, #category-archiv:hover{
+.article img{
+    object-fit: cover;
+    height: 100%;
+    width: 100%;
+    margin-bottom: 10px;
+    box-shadow: 0 2px 25px rgba(0, 0, 0, 0.2);
+}
+
+.article:hover{
     cursor: pointer;
-    transform: scale(1.05);
-    transition: all 0.3s ease;
+    transform: scale(1.015);
+    transition: 0.5s ease;
+}
+
+.container-article-infos{
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    gap: 15px;
+    padding: 20px;
+}
+
+.article-category{
+    background-color: #383b47;
+    border-top-right-radius: 15px;
+    border-bottom-right-radius: 15px;
+    padding: 1px 10px;
+    color: #f0eee6;
+    font-size: 18px;
+    font-weight: 600;
+    box-shadow: 0 1px 15px rgba(0, 0, 0, 0.2);
+}
+
+.article-title{
+    
+}
+
+.article-subtext{
+
 }
 
 
 
 
 
-/* Animations */
-@keyframes beat {
-    0%, 50%, 100% { transform: scale(1, 1); }
-    20%, 80% { transform: scale(0.97, 0.99); }
+
+
+
+
+/*Responsive design */
+
+@media(max-width: 800px) {
+
 }
-@keyframes roll {
-    100% { transform: rotate(360deg); }
-}
-
-
-
-
-
-/* Dark/Light mode switch */
-
-.switch{
-    position: relative;
-    display: inline-block;
-    width: 50px;
-    height: 30px;
-}
-
-.switch input{
-    opacity: 0;
-    width: 0;
-    height: 0;
-}
-
-.switch span{
-    position: absolute;
-    cursor: pointer;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: #ccc;
-    border-radius: 34px;
-    transition: .4s;
-}
-
-.switch span::before{
-    position: absolute;
-    content: '';
-    height: 22px;
-    width: 20px;
-    left: 4px;
-    bottom: 4px;
-    background-color: white;
-    border-radius: 50%;
-    transition: .4s;
-}
-
-.switch input:checked + span{
-    background-color: aqua;
-}
-
-.switch input:checked +span::before{
-    transform: translateX(22px);
-}
-
-
-
-
