--- a/style.css
+++ b/style.css
@@ -21,15 +21,36 @@ a{
 
 .navbar{
     margin: auto;
-    padding: 0 20px;
+    padding: 10px 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.container-header{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+
+#checkbox-toggle{
+    display: none;
+}
+
+#checkbox-icon{
+    display: none;
+    font-size: 30px;
+    color: #EAE7DC;
+    position: absolute;
+    left: 0;
+    top: 10%;
+    padding: 10px;
 }
 
 li{
     list-style: none;
-}
-
-li:hover{
-
 }
 
 .flex{
@@ -42,14 +63,8 @@ li:hover{
     top: 0;
     transition: 0.3s linear;
     background-color: #383b47;
-    padding: 10px;
     box-shadow: 0 2px 25px rgba(0, 0, 0, 0.4);
     z-index: 1;
-}
-
-header nav{
-    position: relative;
-    justify-content: space-between;
 }
 
 .logo{
@@ -95,9 +110,6 @@ header nav{
 
 
 /* Main container */
-
-
-/* Top daily news */
 .container-main{
     padding: 50px 0;
     display: flex;
@@ -105,6 +117,8 @@ header nav{
     align-items: center;
     gap: 40px;
 }
+
+/* Top daily news */
 
 .container-daily{
     display: flex;
@@ -338,25 +352,91 @@ header nav{
     box-shadow: 0 1px 15px rgba(0, 0, 0, 0.2);
 }
 
-.article-title{
-    
-}
-
-.article-subtext{
-
-}
-
-
-
-
-
-
 
 
 
 /*Responsive design */
 
+@media(max-width: 1200px) {
+    .container-daily-news{
+        width: 80%;
+    }
+
+    .container-games{
+        width: 80%;
+        min-height: fit-content;
+    }
+    .navbar{
+        flex-direction: column;
+        gap: 20px;
+    }
+}
+
 @media(max-width: 800px) {
+    .container-daily-news{
+        font-size: 15px;
+        min-height: fit-content;
+        
+    }
+    .daily-header{
+        font-size: 15px;
+    }
+    .daily-category, .article-category{
+        font-size: 15px;
+    }
+    .navlist ul li a{
+        font-size: 15px;
+    }
+    .navlist ul li a i{
+        font-size: 15px;
+    }
+}
+
+@media(max-width: 700px) {
+    .navlist ul{
+        display: none;
+    }
+
+    #checkbox-icon{
+        display: flex;
+    }
+    .article{
+        width: 80%;
+    }
+}
+
+@media(max-width: 400px) {
+    .container-daily-news{
+        font-size: 10px;
+        min-height: fit-content;
+        
+    }
+    .daily-header{
+        font-size: 10px;
+    }
+    .daily-category, .article-category{
+        font-size: 10px;
+    }
+    .navlist ul li a{
+        font-size: 10px;
+    }
+    .navlist ul li a i{
+        font-size: 10px;
+    }
+    .game{
+        min-height: fit-content;
+        min-width: fit-content;
+        font-size: 10px;
+    }
+    .game-stats, .game-time{
+        font-size: 10px;
+    }
+
+
+    .article{
+        font-size: 10px;
+        min-height: fit-content;
+    }
 
 }
 
